# EDEN

./: .gitignore  CMakeLists.txt  README.md  api.py  compile_commands.json  imgui.ini  objects.json  scene.json
.cache/clangd/index/: abi_macros.hpp.A3C5887E2BFD8C32.idx  adl_serializer.hpp.117B694C9CCC25CE.idx  begin.hpp.48D19FCC7A137272.idx  binary_reader.hpp.2E4A31D2D4F0C1BF.idx  binary_writer.hpp.7A284B82E7421933.idx  byte_container_with_subtype.hpp.714FB373A40F70C5.idx  camera.cpp.C8E818813759A0C1.idx  camera.h.0AA4A65069A862D2.idx  config.h.0174B597AB4B5B9A.idx  config.h.3557CBCB6CFE2880.idx  cpp_future.hpp.4820A4EC9553A5DA.idx  detected.hpp.2B624A967818ECF3.idx  eden_tools.cpp.F1B0B3C6AF4BFB35.idx  eden_tools.hpp.E0AFB2173E45D707.idx  eden_tools.hpp.E9C836EEF34CFF5C.idx  end.hpp.0A299C5805D82A03.idx  entity.cpp.4F88A66C8568A46E.idx  entity.h.3B489BDEECD54D50.idx  exceptions.hpp.DFF3B09909825B29.idx  from_json.hpp.A2FF80303E5C25B8.idx  glad.c.76B93C7904E0B771.idx  glad.h.039A14A28F78CF92.idx  glfw3.h.E103C8D1A72EB7D7.idx  hash.hpp.4046D07C12394CD8.idx  hedley.hpp.B30D9B19049CB2B9.idx  hedley_undef.hpp.7FA8165194EDB7F3.idx  identity_tag.hpp.029372712B29080A.idx  imconfig.h.7650E8A3A085A5C2.idx  imgui.cpp.8D0BB51516254BFC.idx  imgui.h.A6E552630198CDB0.idx  imgui_demo.cpp.FF2D1DA1D9E139C2.idx  imgui_draw.cpp.9011FDB671E50DEF.idx  imgui_impl_glfw.cpp.639FCB5BAB312B0D.idx  imgui_impl_glfw.h.925A49F88B643CAB.idx  imgui_impl_opengl3.cpp.675B8C3DD7717F5F.idx  imgui_impl_opengl3.h.C7C9C07193A7888F.idx  imgui_impl_opengl3_loader.h.BE7E4BD9C195DF35.idx  imgui_internal.h.64497EE46F8320D8.idx  imgui_stdlib.cpp.C9B459084C7A1D62.idx  imgui_stdlib.h.6FAA7A01AFE83B5E.idx  (+48 more)
inc/: camera.h  config.h  eden_tools.hpp  entity.h  keyboard.h  scene.h  scene_loader.h
shaders/: normal_view.frag  shader.frag  shader.vert
src/: camera.cpp  config.h  eden_tools.cpp  eden_tools.hpp  entity.cpp  keyboard.cpp  main.cpp  raytracer.cpp  scene.cpp  scene_loader.cpp
src/python/: test.py
